[package]
name = "cfgmap"
description = "A special hashmap made with configuration in mind."
version = "0.1.0"
authors = ["Andrea Jenkins <mctech26@gmail.com>"]
license = "MIT"
repository = "https://github.com/Calmynt/cfgmap"
readme = "README.md"
keywords = ["configuration", "map", "cfgmap"]
edition = "2018"
categories = ["config", "data-structures"]
maintenance = { status = "actively-developed" }

[lib]
name = "cfgmap"
path = "src/cfgmap.rs"

[dependencies]
serde_json = { version = "1.0.48", optional = true }
toml = { version = "0.5.6", optional = true }

[features]
default = ["from_json", "from_toml"]
from_json = ["serde_json"]
from_toml = ["toml"]